--- a/content/blog.org
+++ b/content/blog.org
@@ -2,7 +2,8 @@
 
 ***** the czubicle
 
+@@html:<style> p { text-align: left; } </style>@@
+*23/03/25*
 @@html:<style> p { text-align: center; } </style>@@
-****** *23/03/25*
 My personal blog will soon be making its debut. It will be rudimentary, probably just a top-down chronological list of posts, until 育賢老師 writes some fancy-schmancy blog functionality.
 The name you see above was initially thought to serve as a mere transient vanity plate. However, at the behest of encouragement from my peers, I have decided that czubicle is rather too clever to pass up.
