--- a/content/index.org
+++ b/content/index.org
@@ -7,7 +7,7 @@
 :ID: name
 :END:
 
-@@html:<style> p { text-align: center; } </style>@@
+@@html:<style> p { text-align: justify; } </style>@@
 My name is Matthew Czuba, and this is my website.
 
 That statement will be more inspiring when I have more than 30 words on said website; those words are coming. What's more, the local buzz dictates that there is a [[./blog.org][blog]] a-brewin'.
