--- a/content/blog.org
+++ b/content/blog.org
@@ -2,9 +2,14 @@
 
 *** *the czubicle*
 
-@@html:<style> p { text-align: left; } </style><p>@@
+@@html:<style>
+/* Put all your CSS rules here, at the top of the content */
+main > p:first-of-type { text-align: left; }    /* "the czubicle" */
+main > p:nth-of-type(2) { text-align: center; } /* date */
+main > p:nth-of-type(3) { text-align: left; }   /* main content */
+</style>@@
+
 /March 23, 2025/
 
-@@html:<br><style> p { text-align: center; } </style><p>@@
 My personal blog will soon be making its debut. It will be rudimentary, probably just a top-down chronological list of posts, until 育賢老師 writes some fancy-schmancy blog functionality.
 The name you see above was initially thought to serve as a mere transient vanity plate. However, at the behest of encouragement from my peers, I have decided that czubicle is rather too clever to pass up.
